# babe-node-stencil

node/: Cargo.toml
node/src/: service.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: pallet_staking.rs
