[package]
name = "substrate-stencil"
authors = ["mambisi <lilbizi96@gmail.com>"]
build = 'build.rs'
description = 'Substrate node template'
edition = '2018'
homepage = 'https://substrate.io'
license = 'Unlicense'
repository = 'https://github.com/kaichaosun/substrate-stencil'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
hex-literal = "0.3.1"

# local dependencies
node-template-runtime = { path = '../runtime', version = '3.0.0' }

# Substrate dependencies
frame-benchmarking = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
frame-benchmarking-cli = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
pallet-im-online = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
pallet-staking = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
pallet-transaction-payment-rpc = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sc-basic-authorship = {version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sc-cli = { features = ['wasmtime'], version = '0.9.0',  git = "https://github.com/paritytech/substrate.git" }
sc-client-api = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sc-consensus = {version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sc-consensus-babe = {version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sc-consensus-babe-rpc = {version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sc-consensus-epochs = {version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sc-executor = { features = ['wasmtime'],version = '0.9.0',  git = "https://github.com/paritytech/substrate.git" }
sc-finality-grandpa = {version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sc-finality-grandpa-rpc = {version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sc-keystore = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sc-network = {version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sc-rpc = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sc-rpc-api = {version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sc-service = { features = ['wasmtime'],version = '0.9.0',  git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sp-api = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sp-block-builder = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sp-blockchain = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sp-consensus = {version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sp-consensus-babe = {version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sp-core = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sp-finality-grandpa = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sp-inherents = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sp-runtime = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sc-telemetry = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
sp-transaction-pool = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}
substrate-frame-rpc-system = {version = '3.0.0',  git = "https://github.com/paritytech/substrate.git"}

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
