[package]
name = "node-template-runtime"
authors = ["mambisi <lilbizi96@gmail.com>"]
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
repository = 'https://github.com/kaichaosun/substrate-stencil'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0",git = "https://github.com/paritytech/substrate"}

[dev-dependencies]
sp-io = { version = "3.0.0",git = "https://github.com/paritytech/substrate"}

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
static_assertions = "1.1.0"

# local dependencies
pallet-template = { path = '../pallets/template', default-features = false, version = '3.0.0' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
frame-executive = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
frame-support = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
frame-system = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-authorship = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-babe = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-balances = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-grandpa = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-im-online = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-offences = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-session = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git", features = ['historical'] }
pallet-staking = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-staking-reward-curve = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-sudo = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-utility = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-timestamp = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-treasury = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-collective = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-elections-phragmen = { default-features = false, version = '4.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-membership = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-democracy = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
pallet-scheduler = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
sp-api = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
sp-consensus-babe = { default-features = false, version = '0.9.0',  git = "https://github.com/paritytech/substrate.git"}
sp-core = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
sp-offchain = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
sp-session = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
sp-staking = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
sp-std = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }
sp-version = { default-features = false, version = '3.0.0',  git = "https://github.com/paritytech/substrate.git" }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
	'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
	'pallet-offences/std',
    'pallet-randomness-collective-flip/std',
	'pallet-session/std',
	'pallet-staking/std',
    'pallet-sudo/std',
	'pallet-utility/std',

    'pallet-template/std',
	
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-treasury/std',
    'pallet-collective/std',
    'pallet-elections-phragmen/std',
    'pallet-membership/std',
    'pallet-democracy/std',
    'pallet-scheduler/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
